@@ -1,0 +1,22 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "pattern": [
+    "ZSZ",
+    "ZHZ",
+    "ZZZ"
+  ],
+  "key": {
+    "S": {
+      "item": "zollerngalaxy:zollerniumingot"
+    },
+    "H": {
+      "item": "zollerngalaxy:heart"
+    },
+    "Z": {
+      "item": "zollerngalaxy:zincingot"
+    }
+  },
+  "result": {
+    "item": "zollerngalaxy:heartforce"
+  }
+}
