@@ -19,6 +19,7 @@ Zollern Galaxy v2.0.17
     - Increases the Player's max health and heals them completely.
     - Customizable with config options.
 * Added two new config options to control how high a Player's health can be and how much to increase it by.
+* Added recipes to craft the new heart items.
 * 
 * Fixed OpenGL render glitches with the Shadow Alien boss mob that caused a Post-Render Stack Overflow.
 * 
